correct bad word, add artyom's face & handle

--- a/slide.html
+++ b/slide.html
@@ -205,7 +205,7 @@
             Container-based development and deployment environment
           </li>
           <li>
-            Balkanization of the front end
+            Dissolution of the front end
           </li>
         </ol>
       </div>
@@ -222,7 +222,7 @@
             Container-based development and deployment environment
           </li>
           <li>
-            Balkanization of the front end
+            Dissolution of the front end
           </li>
           <li>
             Existing CSS style guide (my beloved solid.buzzfeed.com/)
@@ -398,7 +398,17 @@
 
       <div class="slide">
         <h2>
-          Jack and this amazing developer named Artyom have done a lot of the heavy lifting on BuzzBlocks.
+          And this is Artyom.
+        </h2>
+        <img class="friend" src="images/artyom.jpg" />
+        <h3 class="link-twitter">
+          @neustroev_ai
+        </h3>
+      </div>
+
+      <div class="slide">
+        <h2>
+          Jack and Artyom have done a lot of the heavy lifting on BuzzBlocks.
         </h2>
       </div>
 
