japanese translated version

--- a/slide.html
+++ b/slide.html
@@ -48,12 +48,18 @@
         <h2>
           Sometimes, we want to share.
         </h2>
+        <h2>
+          時には、シェアしたくなる。
+        </h2>
       </div>
 
 
       <div class="slide">
         <h2>
           Wait, but why?
+        </h2>
+        <h2>
+          え？何で？
         </h2>
       </div>
 
@@ -64,6 +70,7 @@
         <ul>
           <li>
             You serve developers outside your organization.
+            社外の開発者にコードをお届けしたい。
           </li>
         </ul>
       </div>
@@ -75,9 +82,11 @@
         <ul>
           <li>
             You serve developers outside your organization.
+            社外の開発者にコードをお届けしたい。
           </li>
           <li>
             You develop many front-end applications, perhaps for clients.
+            クライアントサイドアプリをいくつも開発したい（もしくは客のため）。
           </li>
         </ul>
       </div>
@@ -89,12 +98,15 @@
         <ul>
           <li>
             You serve developers outside your organization.
+            社外の開発者にコードをお届けしたい。
           </li>
           <li>
             You develop many front-end applications, perhaps for clients.
+            クライアントサイドアプリをいくつも開発したい（もしくは客のため）。
           </li>
           <li>
             Your front end consists of multiple applications, but you want a unified look and feel.
+            フロントエンドはいくつものアプリに分けられているが、団結した体験が必要。
           </li>
         </ul>
       </div>
@@ -106,15 +118,19 @@
         <ul>
           <li>
             You serve developers outside your organization.
+            社外の開発者にコードをお届けしたい。
           </li>
           <li>
             You develop many front-end applications, perhaps for clients.
+            クライアントサイドアプリをいくつも開発したい（もしくは客のため）。
           </li>
           <li>
             Your front end consists of multiple applications, but you want a unified look and feel.
+            フロントエンドはいくつものアプリに分けられているが、団結した体験が必要。
           </li>
           <li>
             You want your front-end code to be reusable.
+            フロントエンドのコードを簡単に再理用したい。
           </li>
         </ul>
       </div>
@@ -127,15 +143,19 @@
         <ul>
           <li>
             You serve developers outside your organization.
+            社外の開発者にコードをお届けしたい。
           </li>
           <li>
             You develop many front-end applications, perhaps for clients.
+            クライアントサイドアプリをいくつも開発したい（もしくは客のため）。
           </li>
           <li class="highlighted">
             Your front end consists of multiple applications, but you want a unified look and feel.
+            フロントエンドはいくつものアプリに分けられているが、団結した体験が必要。
           </li>
           <li>
             You want your front-end code to be reusable.
+            フロントエンドのコードを簡単に再理用したい。
           </li>
         </ul>
       </div>
@@ -144,17 +164,24 @@
         <h2>
           The solution for you may be a <em>component library</em>.
         </h2>
+        <h2>
+          コンポネントライブラリーを使う時が来たかも。
+        </h2>
       </div>
 
       <div class="slide">
         <h2>
           A what now?
         </h2>
+        <h2>
+          なに、それ。
+        </h2>
       </div>
 
       <div class="slide">
         <p class="quote">
           Done properly, [component libraries] can be a collaboration tool bridging design and development teams as well as a tool to break down the user interface into its component parts rather than than thinking about it as a whole or as a series of pages.
+          ちゃんと作れば、「component library」はデザインと開発のチームをまとめる機会になり得る。またはユーザーインターフェースを成分に分けて、ページより扱いやすいものに出来る。
         </p>
         <p class="quote-attribution">
           - Ian Feather, http://ianfeather.co.uk/a-maintainable-style-guide/
@@ -165,15 +192,22 @@
         <h2>
           Let me tell you about BuzzFeed.
         </h2>
+        <h2>
+          ちょっと「BuzzFeed」のお話をしたいと思います。
+        </h2>
       </div>
 
       <div class="slide">
         <h2>
           Let me tell you about BuzzFeed.
         </h2>
+        <h2>
+          ちょっと「BuzzFeed」のお話をしたいと思います。
+        </h2>
         <ol>
           <li>
-            From monolith to microservices
+            From monolith to microservices.
+            「monolith」から「microservices」へ
           </li>
         </ol>
       </div>
@@ -183,12 +217,17 @@
         <h2>
           Let me tell you about BuzzFeed.
         </h2>
+        <h2>
+          ちょっと「BuzzFeed」のお話をしたいと思います。
+        </h2>
         <ol>
           <li>
-            From monolith to microservices
+            From monolith to microservices.
+            「monolith」から「microservices」へ
           </li>
           <li>
-            Container-based development and deployment environment
+            Container-based development and deployment environment.
+            コンテナ型の開発、実行環境
           </li>
         </ol>
       </div>
@@ -197,15 +236,21 @@
         <h2>
           Let me tell you about BuzzFeed.
         </h2>
+        <h2>
+          ちょっと「BuzzFeed」のお話をしたいと思います。
+        </h2>
         <ol>
           <li>
-            From monolith to microservices
+            From monolith to microservices.
+            「monolith」から「microservices」へ
           </li>
           <li>
-            Container-based development and deployment environment
+            Container-based development and deployment environment.
+            コンテナ型の開発、実行環境
           </li>
           <li>
-            Dissolution of the front end
+            Dissolution of the front end.
+            「フロントエンド」の解散。
           </li>
         </ol>
       </div>
@@ -214,18 +259,25 @@
         <h2>
           Let me tell you about BuzzFeed.
         </h2>
+        <h2>
+          ちょっと「BuzzFeed」のお話をしたいと思います。
+        </h2>
         <ol>
           <li>
-            From monolith to microservices
+            From monolith to microservices.
+            「monolith」から「microservices」へ
           </li>
           <li>
-            Container-based development and deployment environment
+            Container-based development and deployment environment.
+            コンテナ型の開発、実行環境
           </li>
           <li>
-            Dissolution of the front end
+            Dissolution of the front end.
+            「フロントエンド」の解散。
           </li>
           <li>
-            Existing CSS style guide (my beloved solid.buzzfeed.com/)
+            Existing CSS style guide (my beloved solid.buzzfeed.com/).
+            社内CSSスタイルガイド。
           </li>
         </ol>
       </div>
@@ -234,20 +286,32 @@
         <h2>
           From one monolithic webapp to 472 services
         </h2>
-      </div>
-
-      <div class="slide">
         <h2>
-          One very good containerization solution
+          一枚岩のウエブアプリから４７２のサービスへ
         </h2>
       </div>
 
       <div class="slide">
         <h2>
           One very good containerization solution
+        </h2>
+        <h2>
+          コンテナ化成功
+        </h2>
+      </div>
+
+      <div class="slide">
+        <h2>
+          One very good containerization solution
+        <h2>
+          コンテナ化成功
+        </h2>
         </h2>
         <h3>
           Please Google "Deploy with haste: the story of rig", by Matt Reiferson.
+        </h3>
+        <h3>
+          "Deploy with haste: the story of rig", by Matt Reiferson、をググってみたらおいかが。
         </h3>
       </div>
 
@@ -259,11 +323,17 @@
         <h2>
           When copy-paste just won't cut it anymore
         </h2>
+        <h2>
+          もうコピーペーストじゃ物足りない
+        </h2>
       </div>
 
       <div class="slide">
         <h2>
           Let me introduce you to one of my friends.
+        </h2>
+        <h2>
+          友達の一人を紹介させていただきます。
         </h2>
       </div>
 
@@ -277,10 +347,14 @@
           @ianfeather
         </h3>
         <p>
-          Used to work at Lonely Planet
+          Used to work at Lonely Planet.
+          元Lonely Planet社員。
         </p>
         <p>
           Made three (!!!) separate attempts at developing a component library
+        </p>
+        <p>
+          3回も！コンポネントライブラリーを開発しようと企てる。最後のが成功。
         </p>
       </div>
 
@@ -295,18 +369,36 @@
         <h2>
           Actually, we tried to do this at BuzzFeed before.
         </h2>
+        <h2>
+          実は当社でも一回ぐらい未遂の試しが。
+        </h2>
       </div>
 
       <div class="slide">
         <h2>
           Even the best technology is worth nothing if it doesn't come at the right time.
         </h2>
+        <h2>
+          最高のテクノでも、時間ミスだったら台無し。
+        </h2>
       </div>
 
 
       <div class="slide">
         <h2>
+          The solution? BuzzBlocks.
+        </h2>
+        <h2>
+          答えは、「BuzzBlocks」。
+        </h2>
+      </div>
+
+      <div class="slide">
+        <h2>
           So what the heck is a buzz... block... thingy?
+        </h2>
+        <h2>
+          「BuzzBlocks」とはどのようなものか。
         </h2>
       </div>
 
@@ -339,6 +431,9 @@
       <div class="slide">
         <h2>
           How do we define a component?
+        </h2>
+        <h2>
+          成分の定義。
         </h2>
       </div>
 
@@ -384,11 +479,17 @@
         <h2>
           The why of a component library is also the how.
         </h2>
+        <h2>
+          コンポネントライブラリーの「何で」はその「どうやって」と同一。
+        </h2>
       </div>
 
       <div class="slide">
         <h2>
           This is Jack.
+        </h2>
+        <h2>
+          ジャックを紹介させていただきます。
         </h2>
         <img class="friend" src="images/jack.jpg" />
         <h3 class="link-twitter">
@@ -400,6 +501,9 @@
         <h2>
           And this is Artyom.
         </h2>
+        <h2>
+          アーチーヨムも。
+        </h2>
         <img class="friend" src="images/artyom.jpg" />
         <h3 class="link-twitter">
           @neustroev_ai
@@ -410,11 +514,17 @@
         <h2>
           Jack and Artyom have done a lot of the heavy lifting on BuzzBlocks.
         </h2>
+        <h2>
+          この二人の「BuzzBlocks」のための努力がすごい。
+        </h2>
       </div>
 
       <div class="slide">
         <h2>
           And it was Artyom who coded up the gallery.
+        </h2>
+        <h2>
+          アーチーヨムが、ギャラリーを作ってくれた。
         </h2>
       </div>
 
@@ -422,6 +532,10 @@
         <h2>
           Documentation Is Your Only Hope
         </h2>
+        <h2>
+          ドキュメンテーションがないと、もう災難。
+        </h2>
+
       </div>
       <div class="slide">
         <ol>
@@ -444,6 +558,9 @@
       </div>
 
       <div class="slide">
+        <h3>
+          開発者自身のパソコンで開発を簡単にするのも欠かせない。
+        </h3>
         <p class="code">
           rig run bpager --no-limit-resources -e local_fe_modules=true
         </p>
@@ -453,16 +570,25 @@
         <h2>
           On Giving the People What They Want
         </h2>
+        <h2>
+          同僚の期待に対応する。
+        </h2>
       </div>
 
       <div class="slide">
         <h2>
           On Giving the People What They Want
         </h2>
+        <h2>
+          同僚の期待に対応する。
+        </h2>
         <p>
           <em>
             And nothing else.
           </em>
+        </p>
+        <p>
+          期待していないものをお届けしちゃダメ！
         </p>
       </div>
 
@@ -498,6 +624,7 @@
         </h2>
         <h3>
           A web hook publishes every commit that touches the BuzzBlocks directory as a test npm package (if the build is successful).
+          「BuzzBlocks」に関するコミットはどれもテスト成功を成し遂げたら、Webhookで「npm package」としてパブリシュされる。
         </h3>
       </div>
 
@@ -505,14 +632,23 @@
         <h2>
           On the Trust Budget
         </h2>
+        <h2>
+          信頼貯金
+        </h2>
         <p>
           You can only break someone's shit so many times.
+        </p>
+        <p>
+          人の使っているテクノを何度も壊したら、信用が消えてしまうし、もう使わなくなる。
         </p>
       </div>
 
       <div class="slide">
         <h2>
           Okay, that's great and all, how do you not break things?
+        </h2>
+        <h2>
+          え？どうやったら壊さない？
         </h2>
       </div>
 
@@ -553,20 +689,32 @@
         <h2>
           The Slack channel is one of the most important parts of the project.
         </h2>
-      </div>
-
-      <div class="slide">
         <h2>
-          Developers need to know where the code they're changing is being used.
+          スラックチャンネルはプロジェクトの大事な部分。
         </h2>
       </div>
 
       <div class="slide">
         <h2>
           Developers need to know where the code they're changing is being used.
+        </h2>
+        <h2>
+          開発者は、編集したいコードがどこで使われているか知りたい。
+        </h2>
+      </div>
+
+      <div class="slide">
+        <h2>
+          Developers need to know where the code they're changing is being used.
+        </h2>
+        <h2>
+          開発者は、編集したいコードがどこで使われているか知りたい。
         </h2>
         <h3>
           Umm, we haven't necessarily solved this one...
+        </h3>
+        <h3>
+          これはまだちょっと…
         </h3>
       </div>
 
@@ -574,32 +722,50 @@
         <h2>
           The success of a project like this can be measured by developer buy-in.
         </h2>
+        <h2>
+          成功を図るには、開発者の参加を見る。
+        </h2>
       </div>
 
       <div class="slide">
         <h2>
           A component library is a process, not a product.
         </h2>
-      </div>
-
-      <div class="slide">
         <h2>
-          Suddenly, you're the community manager of an internal open-source library!
+          コンポネントライブラリーは、プロダクトではなくプロセス。
         </h2>
       </div>
 
       <div class="slide">
         <h2>
           Suddenly, you're the community manager of an internal open-source library!
+        </h2>
+        <h2>
+          社内オープンソースライブレリーのコミュニティマネージャーさん任命、おめでとう！
+        </h2>
+      </div>
+
+      <div class="slide">
+        <h2>
+          Suddenly, you're the community manager of an internal open-source library!
+        </h2>
+        <h2>
+          社内オープンソースライブレリーのコミュニティマネージャーさん任命、おめでとう！
         </h2>
         <h3>
           Oh, you lucky dev, you.
+        </h3>
+        <h3>
+          これから楽しくなるよ。
         </h3>
       </div>
 
       <div class="slide">
         <p class="quote">
           It's not a bad project, but it's not a fun project.
+        </p>
+        <p class="quote">
+          悪いプロジェクトじゃないけど、楽じゃない。
         </p>
         <p class="quote-attribution">
           - Jack Reid
@@ -610,6 +776,9 @@
         <p class="quote">
           99% of this is people.
         </p>
+        <p class="quote">
+          ９９％が人間問題。
+        </p>
         <p class="quote-attribution">
           - Jack Reid
         </p>
@@ -619,11 +788,17 @@
         <h2>
           So what's next for BuzzBlocks?
         </h2>
+        <h2>
+          「BuzzBlocks」はこれからどうなるの？
+        </h2>
       </div>
 
       <div class="slide">
         <h2>
           Meet Emily.
+        </h2>
+        <h2>
+          最後にエミリーを紹介したい。
         </h2>
         <img class="friend" src="images/emily.jpg" />
         <h3 class="link-twitter">
@@ -635,14 +810,23 @@
         <h2>
           From an engineering solution to a design system.
         </h2>
+        <h2>
+          開発ソリューションから、デザインシステムへ。
+        </h2>
       </div>
 
       <div class="slide">
         <h2>
           "System-first" is not the most intuitive way for designers faced with constantly changing business requirements to work.
         </h2>
+        <h2>
+          デザイナーの皆さんはこういう考え方に慣れていないかも。
+        </h2>
         <h3>
           It's our job to make it as easy as possible for them.
+        </h3>
+        <h3>
+          私たち開発者がそれを助けるのがお仕事。
         </h3>
       </div>
 
@@ -650,17 +834,26 @@
         <h2>
           You are a translator between humans and computers.
         </h2>
+        <h2>
+          開発者は、人間と機会の間に立つ通訳者。
+        </h2>
       </div>
 
       <div class="slide">
         <h2>
           Every technical problem becomes a human problem at scale.
         </h2>
+        <h2>
+          テクノの問題は、拡大すれば人間問題になる。
+        </h2>
       </div>
 
       <div class="slide">
         <h2>
           Thank you!
+        </h2>
+        <h2>
+          どうもありがとうございました。
         </h2>
       </div>
     </div>
